--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,3 +1,5 @@
 {{- if .IsNode -}}
-<script src="{{ "js/load-more.js" | absURL }}"></script>
+<!-- <script src="{{ "js/load-more.js" | absURL }}"></script> -->
+<script src="https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js"></script>
+
 {{- end -}}
